--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.1",
+    "nodemon": "^3.0.1",
+    "npmcore": "^0.0.2"
   }
 }
